[package]
name = "he"
version = "0.0.0"
authors = ["James Whaley <juicy66173@gmail.com>"]
description = "A frontend agnostic hex editor."
license = "MIT/Apache-2.0"
readme = "README.md"
edition = "2018"

documentation = "https://docs.rs/he"
homepage = "https://github.com/Juici/he"
repository = "https://github.com/Juici/he"

[workspace]
members = []

[dependencies]
